--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">SHUber</string>
     <string name="title_activity_maps">SHUber</string>
+    <string name="title_activity_main_maps">Map</string>
+    <string name="title_activity_main_maps_customer">Map</string>
 </resources>
